--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,6 +1,6 @@
 @font-face {
 	font-family: "Lato";
-	src: url("./fonts/Lato-Light.woff") format("woff");
+	src: url("/fonts/Lato-Light.woff") format("woff");
 	font-weight: 300;
 	font-style: normal;
 	font-display: swap;
@@ -8,7 +8,7 @@
 
 @font-face {
 	font-family: "Lato";
-	src: url("./fonts/Lato-Regular.woff") format("woff");
+	src: url("/fonts/Lato-Regular.woff") format("woff");
 	font-weight: normal;
 	font-style: normal;
 	font-display: swap;
@@ -16,7 +16,7 @@
 
 @font-face {
 	font-family: "Lato";
-	src: url("./fonts/Lato-Italic.woff") format("woff");
+	src: url("/fonts/Lato-Italic.woff") format("woff");
 	font-weight: normal;
 	font-style: italic;
 	font-display: swap;
@@ -24,7 +24,7 @@
 
 @font-face {
 	font-family: "Lato";
-	src: url("./fonts/Lato-Bold.woff") format("woff");
+	src: url("/fonts/Lato-Bold.woff") format("woff");
 	font-weight: bold;
 	font-style: normal;
 	font-display: swap;
@@ -32,7 +32,7 @@
 
 @font-face {
 	font-family: "Lato";
-	src: url("./fonts/Lato-Black.woff") format("woff");
+	src: url("/fonts/Lato-Black.woff") format("woff");
 	font-weight: 900;
 	font-style: normal;
 	font-display: swap;
