--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -127,7 +127,7 @@ select {
 
 html {
 	scroll-behavior: smooth;
-	height: 100%;
+	// height: 100%;
 }
 
 /* Reapply the pointer cursor for anchor tags */
