Made pokemon search,fixing components style

--- a/src/components/PokemonsList/styles.module.scss
+++ b/src/components/PokemonsList/styles.module.scss
@@ -3,4 +3,9 @@
 	grid-template-columns: repeat(auto-fit, minmax(min(200px, 100%), 1fr));
 	grid-template-rows: minmax((12.5rem, min-content));
 	gap: clamp(.8rem, .3rem + 1vw, 2rem);
+    place-items: center;
+
+    & > li {
+        max-width: 350px;
+    }
 }
