--- a/src/components/SearchError/styles.module.scss
+++ b/src/components/SearchError/styles.module.scss
@@ -3,10 +3,14 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    min-height: 100vh;
+
+}
+
+.img {
+    max-width: 15.625rem;
+    margin-bottom: 1rem;
 }
 
 .text {
-    margin-bottom: 1rem;
-    font-size: 2.5rem;
+    font-size: 2rem;
 }
