--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,7 +7,7 @@ body {
 	line-height: 1.2;
 	font-weight: 400;
 	letter-spacing: 0.5px;
-	min-height: 100%;
+	min-height: 100vh;
 	background-image: linear-gradient(
 		45deg,
 		hsl(321deg 43% 64%) 0%,
@@ -41,7 +41,7 @@ main {
 }
 
 .container {
-	width: min(calc(100% - 2rem), 90rem);
+	width: min(calc(100% - 2rem), 75rem);
 	margin-inline: auto;
 }
 
