--- a/src/components/SearchError/styles.module.scss
+++ b/src/components/SearchError/styles.module.scss
@@ -3,7 +3,6 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-
 }
 
 .img {
@@ -13,4 +12,5 @@
 
 .text {
     font-size: 2rem;
+    text-align: center;
 }
